--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,5 +18,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["src/**/*"], // Adjust this to your actual TypeScript source files
+  "exclude": ["node_modules", "vite.config.js"] // Exclude non-TypeScript files
 }
